Fixed wrapping on small screens

--- a/_sass/home-ctas.scss
+++ b/_sass/home-ctas.scss
@@ -2,10 +2,14 @@
 	display: flex;
 	justify-content: space-between;
 	margin-top: 80px;
+	flex-wrap: wrap;
+
 
 	a {
 		color: #ffffff;
 		font-size: 1.1em;
+		width: 145px;
+		margin-bottom: 30px;
 		
 		&.coming-soon {
 			color: #E3E3E3;
@@ -16,6 +20,7 @@
 		}
 		span {
 			text-transform: uppercase;
+			font-weight: 800;
 		}
 	}
 }
@@ -31,8 +36,17 @@
 		align-items: center;
 		margin-left: auto;
 		margin-right: auto;
+
 	img {
 		width: 300px;
+		display: block;
+		margin-bottom: 30px;
+		margin-right: auto;
+		margin-left: auto;
+	}
+	div.button.alt {
+		margin-left: auto;
+		margin-right: auto;
 	}
 	}
 }
